fixed tag overflow snippet item

--- a/browser/render/layouts/list-and-detail/snippet-item/snippet-item.sass
+++ b/browser/render/layouts/list-and-detail/snippet-item/snippet-item.sass
@@ -28,7 +28,7 @@
     margin-top: 10px
     flex: 1
     overflow: hidden
-    flex-wrap: wrap
+    max-height: 50px
   .no-tag
     display: block
     text-align: center
